fix button white space

--- a/less/style.less
+++ b/less/style.less
@@ -342,6 +342,7 @@ section#slider{
 			padding: 0.8em;
 			font-weight: 300;
 			border-radius: 9px;
+			white-space: normal;
 			&:hover{
 				border: 1px solid rgba(255,255,255,0.8);
 			}
